<resources>
    <string name="app_name">SugarFree</string>

    <string name="navigation_drawer_open">Open navigation bar</string>
    <string name="navigation_drawer_close">Close navigation bar</string>

    <!-- Welcome Activity -->
    <string name="sugarFree">SugarFree</string>
    <string name="welcomeText">Junte-se à nossa comunidade e fique por dentro das deliciosas receitas de comidas para pessoas com Diabetes e crie seus próprios cardápios.</string>
    <string name="login">ENTRAR</string>
    <string name="register">CADASTRAR</string>

    <!-- Login Activity -->
    <string name="signIn">Sign In</string>
    <string name="loginTitle">Entre na\n sua conta</string>
    <string name="createAccount">Don\'t have an account yet? Sign Up</string>
    <string name="password">Senha</string>
    <string name="username">Usuário</string>
    <string name="rememberMe">Remember me</string>

    <!-- Create Account Activity -->
    <string name="registerTitle">Crie \nsua conta</string>
    <string name="email">E-mail</string>
    <string name="name">Nome</string>
    <string name="confirmPassword">Confirmar senha</string>
    <string name="confirm">Confirmar</string>


    <!-- Details Activity -->
    <string name="ingredients">3 cenouras\n1 litro de água\n1 xícara de cenoura\n1/2 de cenouta\ncenoura à gosto</string>
    <string name="instructions">Lorem ipsum phasellus accumsan justo condimentum conubia vel dapibus aliquet commodo.
    \nFusce consequat accumsan tempus risus tortor leo netus habitant, litora lobortis enim pulvinar sociosqu et torquent neque vestibulum. erat mauris placerat rutrum etiam nisi duis imperdiet urna, etiam litora aliquet enim mauris.
        \nIpsum adipiscing, purus erat vehicula elit lacus hac urna.</string>
    <string name="tags">#PreparoRapido    #Almoço    #Jantar    #Sopa\n#PreparoRapido    #Almoço    #Jantar    #Sopa</string>

    <string name="recipeMenuDesc">Chega de comer sempre a mesma coisa! Aqui você pode criar cardápios variados, personalizade como desejar.\n\nClique em + para adicionar um cardápio.</string>
    <string name="recipeMenuAddTip">Clique em + para adicionar uma refeição.</string>

    <!-- AddFood Activity -->
    <string-array name="units">
        <item>Grama(s)</item>
        <item>Mililitos(s)</item>
        <item>Unidade(s)</item>
        <item>Xícara(s)</item>
        <item>Colher(es)</item>
        <item>Copo(s)</item>
    </string-array>

    <string-array name="mealType">
        <item>Entrada</item>
        <item>Prato Principal</item>
        <item>Sobremesa</item>
    </string-array>
</resources>