<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/lblTitleSugarFree"
        android:layout_width="234dp"
        android:layout_height="45dp"
        android:background="@drawable/ic_sugarfree_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/lblTitleLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/cloud_light"
        android:text="@string/loginTitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitleSugarFree" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_field"
        android:ems="14"
        android:fontFamily="@font/cloud_light"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:textColor="@color/darkGray"
        android:textColorHint="@color/darkGray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitleLogin" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/input_field"
        android:ems="14"
        android:fontFamily="@font/cloud_light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/darkGray"
        android:textColorHint="@color/darkGray"

        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:background="@drawable/ic_btn_filled"
        android:fontFamily="@font/cloud_light"
        android:onClick="onClickLogin"
        android:text="@string/login"
        android:textColor="@color/darkBlue"
        android:textSize="20sp"
        app:backgroundTint="@color/lightBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <ImageView
        android:id="@+id/btnGoBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_return_arrow"
        android:onClick="onClickReturn"/>

</androidx.constraintlayout.widget.ConstraintLayout>